Resolved merge conflicts

--- a/testCode/mum_code/templates/home.html
+++ b/testCode/mum_code/templates/home.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Project</title>
+    <title>My Django Project</title>
+    <!-- Подключение Tailwind CSS через CDN -->
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </head>
 <body>
-    <h1>It's our project</h1>
+    <!-- Ваш контент -->
+    <h1 class="text-3xl font-bold underline">
+        Hello, Tailwind CSS!
+    </h1>
 </body>
 </html>
